--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,11 @@
     <body>
       <div class="container">
         <menu class="menu">
-          <a href="https://g1.globo.com/">
+          <a href="https://g1.globo.com/" class="web">
             <img src="../img/logoGlobo.png" alt="globo.com" />
+          </a>
+          <a href="https://g1.globo.com/" class="mobile">
+            <img src="../img/logoMobile.png" alt="globo.com" />
           </a>
           <div class="menuOption">
             <a href="https://g1.globo.com/">g1</a>
